# quantmodel2

./: .gitignore  README.md  engine.py  evaluator.py  exceptions.py  export.py  fetcher.py  generator.py  helpers.py  logger.py  main.py  models.py  pair_analyzer.py  performance.py  portfolio.py  processor.py  pyproject.toml  requirements.txt  statistics.py  stats_interface.py  strategy.py  synchronizer.py
examples/: README.md  advanced_backtest.py  basic_backtest.py  config_example.yaml  portfolio_optimization_example.py
src/quantmodel/: __init__.py  __main__.py
src/quantmodel/analysis/: __init__.py  analysis_helpers.py  pair_analyzer.py  processor.py  signal_analysis.py  statistics.py  stats_interface.py
src/quantmodel/backtest/: __init__.py  engine.py  evaluator.py  performance.py  portfolio.py  strategy.py
src/quantmodel/data/: fetcher.py
src/quantmodel/portfolio/: __init__.py  allocator.py  optimizer.py
src/quantmodel/processing/: __init__.py  features.py  indicator_helpers.py  processor.py  synchronizer.py
src/quantmodel/risk/: __init__.py  metrics.py  var.py
src/quantmodel/signals/: __init__.py  generator.py  models.py
src/quantmodel/utils/: __init__.py  config.py  display.py  export.py  helpers.py  logger.py  validators.py
tests/: __init__.py  test_portfolio.py  test_risk.py
